day-05-observability-autoscaling/manifests/07-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
    tier: frontend
    component: capstone
spec:
  type: ClusterIP
  selector:
    app: web
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
